fix: update get(0) usage to of getFirst()